--- a/archives.html
+++ b/archives.html
@@ -21,7 +21,7 @@
 
     <dl>
             <dt>Tue 03 December 2024</dt>
-            <dd><a href="/my-super-post.html">配置代理 <del>终级</del> 中级指南</a></dd>
+            <dd><a href="/how_to_config_docker_proxy.html">配置代理 <del>终级</del> 中级指南</a></dd>
     </dl>
       </main>
       <footer>
