--- a/how_to_config_docker_proxy.html
+++ b/how_to_config_docker_proxy.html
@@ -189,7 +189,7 @@ Error response from daemon: Get &quot;https://registry-1.docker.io/v2/&quot;: co
 <address>
     Proudly powered by <a rel="nofollow" href="https://getpelican.com/">Pelican</a>,
     which takes great advantage of <a rel="nofollow" href="https://www.python.org/">Python</a>,
-    theme by <a rel="nofollow" href="">impipya</a>>
+    theme by <a rel="nofollow" href="">impipya</a>
 </address>
       </footer>
   </body>
