--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </ul></nav>
       </header>
       <main>
-        <h1>This is me theme</h1>
+        <h1>impipya</h1>
         <h2>All articles</h2>
 
 
@@ -39,7 +39,7 @@
 <address>
     Proudly powered by <a rel="nofollow" href="https://getpelican.com/">Pelican</a>,
     which takes great advantage of <a rel="nofollow" href="https://www.python.org/">Python</a>,
-    theme by <a rel="nofollow" href="">impipya</a>>
+    theme by <a rel="nofollow" href="">impipya</a>
 </address>
       </footer>
   </body>
