--- a/categories.html
+++ b/categories.html
@@ -26,7 +26,7 @@
 <address>
     Proudly powered by <a rel="nofollow" href="https://getpelican.com/">Pelican</a>,
     which takes great advantage of <a rel="nofollow" href="https://www.python.org/">Python</a>,
-    theme by <a rel="nofollow" href="">impipya</a>>
+    theme by <a rel="nofollow" href="">impipya</a>
 </address>
       </footer>
   </body>
